[gd_scene load_steps=3 format=3 uid="uid://c8p2a5ucd4m5d"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_qt1sd"]
[ext_resource type="FontFile" uid="uid://c565xgjqhs1ul" path="res://Assets/font/joystix monospace.otf" id="2_m0p5o"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_qt1sd")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32

[node name="LabelContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="PointsLabel" type="Label" parent="MarginContainer/LabelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_m0p5o")
theme_override_font_sizes/font_size = 40
text = "0"

[node name="LivesContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GameOverLabel" type="Label" parent="MarginContainer/CenterContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.94902, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_m0p5o")
theme_override_font_sizes/font_size = 120
text = "You Suck!"
